# mrmat-python-api-fastapi

./: .pylintrc  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: build.yml
ci/: __init__.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: HomeComponent.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
mrmat_python_api_fastapi/: __init__.py  app.py  config.py  cui.py  db.py
mrmat_python_api_fastapi/apis/: __init__.py
mrmat_python_api_fastapi/apis/greeting/v1/: __init__.py  api.py  model.py
mrmat_python_api_fastapi/apis/greeting/v2/: api.py  model.py
mrmat_python_api_fastapi/apis/greeting/v3/: __init__.py  api.py  model.py
mrmat_python_api_fastapi/apis/healthz/: __init__.py
mrmat_python_api_fastapi/apis/resource/v1/: api.py  db.py  schema.py
src/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.vue  main.js
src/frontend/src/assets/: base.css
src/frontend/src/components/: AppHeader.vue  AppSidebar.vue  GreetingV1.vue  GreetingV2.vue  GreetingV3.vue
src/frontend/src/components/__tests__/: AppHeader.spec.js
src/frontend/src/router/: index.js
src/frontend/src/stores/: greeting_store.js
src/frontend/src/views/: GreetingView.vue  HomeView.vue  ProtectedView.vue  ResourceView.vue
src/python/mrmat_python_api_fastapi/: __init__.py
src/python/mrmat_python_api_fastapi/apis/greeting/v2/: __init__.py
src/python/mrmat_python_api_fastapi/apis/healthz/: api.py
src/python/mrmat_python_api_fastapi/migrations/: alembic.ini  env.py
src/python/mrmat_python_api_fastapi/migrations/versions/: db0d3f70134d_scaffolding.py
tests/: test_excuse.py
(+4 files in other folders)
