[metadata]
name = mrmat-python-api-fastapi
version = attr: ci.version
author = Mathieu Imfeld
author_email = imfeldma+9jqerw@gmail.com
maintainer = Mathieu Imfeld
maintainer_email = imfeldma+9jqerw@gmail.com
long_description = file: README.md
license = MIT
url = https://github.com/MrMatOrg/mrmat-python-api-fastapi
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    uvicorn~=0.17.6
    fastapi~=0.75.0
    pydantic~=1.9.0

[options.entry_points]
console_scripts =
    mrmat-python-api-fastapi = mrmat_python_api_fastapi.cui:main
    mrmat-python-api-fastapi-client = mrmat_python_api_fastapi.client:main

[options.packages.find]
exclude =
    ci
